--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@docusaurus/plugin-content-blog": "^3.9.2",
     "@docusaurus/preset-classic": "3.9.2",
     "@docusaurus/theme-common": "^3.9.2",
+    "@docusaurus/utils-common": "^3.9.2",
     "@easyops-cn/docusaurus-search-local": "^0.52.2",
     "@giscus/react": "^3.1.0",
     "@iconify/react": "^6.0.2",
