--- a/package.json
+++ b/package.json
@@ -24,11 +24,16 @@
     "@giscus/react": "^3.1.0",
     "@iconify/react": "^6.0.2",
     "@mdx-js/react": "^3.0.0",
+    "@radix-ui/react-slot": "^1.2.4",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.0.0",
     "framer-motion": "^12.23.26",
+    "lucide-react": "^0.563.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
